--- a/telebot.fsproj
+++ b/telebot.fsproj
@@ -3,11 +3,14 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Include="Program.fs" />
+    <Content Include=".dockerignore" />
     <Content Include=".gitignore" />
+    <Content Include="Dockerfile" />
     <Content Include="replacements" />
   </ItemGroup>
 
