--- a/telebot.fsproj
+++ b/telebot.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="TikTok.fs" />
     <Compile Include="Program.fs" />
     <Content Include=".dockerignore" />
     <Content Include=".gitignore" />
@@ -17,6 +18,7 @@
   <ItemGroup>
     <PackageReference Include="Funogram" Version="3.0.2" />
     <PackageReference Include="Funogram.Telegram" Version="7.10.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
   
   <ItemGroup>
