--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@
 on:
   push:
     branches:
-      - main  # or any branch you want to deploy from
+      - master  # or any branch you want to deploy from
 
 jobs:
   build_and_deploy:
