Remove old docker build job

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,6 +37,7 @@ jobs:
           host: ${{ secrets.DROPLET_IP }}
           username: ${{ secrets.DROPLET_USER }}
           key: ${{ secrets.DROPLET_SSH_KEY }}
+          debug: true
           script: |
             docker pull ghcr.io/${{ github.repository_owner }}/telebot:main
             docker stop telebot || true
