--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -43,3 +43,4 @@ jobs:
             docker stop telebot || true
             docker rm telebot || true
             docker run -d -t -i -e TELEGRAM_BOT_TOKEN='{{ secrets.TELEGRAM_BOT_TOKEN }}' --name telebot ghcr.io/${{ github.repository_owner }}/telebot:main
+            docker image prune -f
