--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -97,15 +97,15 @@ jobs:
         # against the sigstore community Fulcio instance.
         run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
 
-      - name: SSH into DigitalOcean Droplet and deploy
-        uses: appleboy/ssh-action@v0.1.4
-        with:
-          host: ${{ secrets.DROPLET_IP }}
-          username: ${{ secrets.DROPLET_USER }}
-          key: ${{ secrets.DROPLET_SSH_KEY }}
-          debug: true
-          script: |
-            docker pull ghcr.io/${{ github.repository_owner }}/telebot:master
-            docker stop telebot || true
-            docker rm telebot || true
-            docker run -d -e TELEGRAM_BOT_TOKEN='${{ secrets.TELEGRAM_BOT_TOKEN }}' --name telebot ghcr.io/${{ github.repository_owner }}/telebot:master
+#      - name: SSH into DigitalOcean Droplet and deploy
+#        uses: appleboy/ssh-action@v0.1.4
+#        with:
+#          host: ${{ secrets.DROPLET_IP }}
+#          username: ${{ secrets.DROPLET_USER }}
+#          key: ${{ secrets.DROPLET_SSH_KEY }}
+#          debug: true
+#          script: |
+#            docker pull ghcr.io/${{ github.repository_owner }}/telebot:master
+#            docker stop telebot || true
+#            docker rm telebot || true
+#            docker run -d -e TELEGRAM_BOT_TOKEN='${{ secrets.TELEGRAM_BOT_TOKEN }}' --name telebot ghcr.io/${{ github.repository_owner }}/telebot:master
