--- a/telebot.fsproj
+++ b/telebot.fsproj
@@ -12,8 +12,8 @@
     <Content Include=".dockerignore" />
     <Content Include=".gitignore" />
     <Content Include="Dockerfile" />
-    <Content Include="igHeaders.json" CopyToPublishDirectory="Always" CopyToOutputDirectory="Always"/>
-    <Content Include="igUrlContent.json" CopyToPublishDirectory="Always" CopyToOutputDirectory="Always"/>
+    <Content Include="igHeaders.json" CopyToPublishDirectory="Always" CopyToOutputDirectory="Always" />
+    <Content Include="igUrlContent.json" CopyToPublishDirectory="Always" CopyToOutputDirectory="Always" />
   </ItemGroup>
 
   <ItemGroup>
@@ -33,6 +33,8 @@
     <PackageReference Include="Funogram.Telegram" Version="7.10.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Polly" Version="8.5.0" />
+    <PackageReference Include="Serilog" Version="4.2.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="YoutubeExplode" Version="6.5.0" />
     <PackageReference Include="YoutubeExplode.Converter" Version="6.5.0" />
   </ItemGroup>
