Added more logs for youtube videos

--- a/telebot.fsproj
+++ b/telebot.fsproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="Seq.fs" />
     <Compile Include="Policies.fs" />
     <Compile Include="Text.fs" />
     <Compile Include="VideoDownloader.fs" />
