--- a/telebot.fsproj
+++ b/telebot.fsproj
@@ -20,6 +20,7 @@
     <Compile Include="Seq.fs" />
     <Compile Include="Policies.fs" />
     <Compile Include="Text.fs" />
+    <Compile Include="Thumbnail.fs" />
     <Compile Include="VideoDownloader.fs" />
     <Compile Include="Instagram.fs" />
     <Compile Include="TikTok.fs" />
@@ -35,8 +36,6 @@
     <PackageReference Include="Polly" Version="8.5.0" />
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.6" />
-    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.4" />
     <PackageReference Include="YoutubeExplode" Version="6.5.0" />
     <PackageReference Include="YoutubeExplode.Converter" Version="6.5.0" />
   </ItemGroup>
