--- a/telebot.fsproj
+++ b/telebot.fsproj
@@ -22,6 +22,7 @@
     <Compile Include="Text.fs" />
     <Compile Include="Thumbnail.fs" />
     <Compile Include="VideoDownloader.fs" />
+    <Compile Include="InstagramData.fs" />
     <Compile Include="Instagram.fs" />
     <Compile Include="TikTok.fs" />
     <Compile Include="Twitter.fs" />
@@ -36,8 +37,8 @@
     <PackageReference Include="Polly" Version="8.5.0" />
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
-    <PackageReference Include="YoutubeExplode" Version="6.5.0" />
-    <PackageReference Include="YoutubeExplode.Converter" Version="6.5.0" />
+    <PackageReference Include="YoutubeExplode" Version="6.5.3" />
+    <PackageReference Include="YoutubeExplode.Converter" Version="6.5.3" />
   </ItemGroup>
 
 </Project>
