--- a/telebot.fsproj
+++ b/telebot.fsproj
@@ -23,6 +23,7 @@
     <Compile Include="LoggingHandler.fs" />
     <Compile Include="Thumbnail.fs" />
     <Compile Include="VideoDownloader.fs" />
+    <Compile Include="HttpClient.fs" />
     <Compile Include="InstagramData.fs" />
     <Compile Include="Instagram.fs" />
     <Compile Include="TikTok.fs" />
