--- a/telebot.fsproj
+++ b/telebot.fsproj
@@ -17,14 +17,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="InstagramData.fs" />
+    <Compile Include="TwitterData.fs" />
+    <Compile Include="LoggingHandler.fs" />
     <Compile Include="Seq.fs" />
     <Compile Include="Policies.fs" />
     <Compile Include="Text.fs" />
-    <Compile Include="LoggingHandler.fs" />
+    <Compile Include="HttpClient.fs" />
     <Compile Include="Thumbnail.fs" />
     <Compile Include="VideoDownloader.fs" />
-    <Compile Include="HttpClient.fs" />
-    <Compile Include="InstagramData.fs" />
     <Compile Include="Instagram.fs" />
     <Compile Include="TikTok.fs" />
     <Compile Include="Twitter.fs" />
