--- a/telebot.fsproj
+++ b/telebot.fsproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="PrometheusMetrics.fs" />
     <Compile Include="InstagramData.fs" />
     <Compile Include="TwitterData.fs" />
     <Compile Include="LoggingHandler.fs" />
@@ -37,10 +38,13 @@
   <ItemGroup>
     <PackageReference Include="Funogram" Version="3.0.2" />
     <PackageReference Include="Funogram.Telegram" Version="7.10.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Polly" Version="8.5.2" />
+    <PackageReference Include="prometheus-net" Version="8.2.1" />
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Suave" Version="2.6.2" />
     <PackageReference Include="YoutubeExplode" Version="6.5.3" />
     <PackageReference Include="YoutubeExplode.Converter" Version="6.5.3" />
     <PackageReference Update="FSharp.Core" Version="9.0.201" />
